--- a/public/views/catalog/catalog-list.view.client.html
+++ b/public/views/catalog/catalog-list.view.client.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-static-top">
-    <h3>Hike 4000</h3>
+    <h3>Catalog of Items</h3>
     <div class="Check_Icon"><a href="#/user/{{model.uid}}/post/{{model.type}}"><i class="fa fa-plus fa-2x" aria-hidden="true"></i></a></div>
 
 </nav>
@@ -72,11 +72,11 @@
     <div class="pull-left">
         <!--
         <i class="fa fa-area-chart fa-2x"></i>
-        -->
         <a href="#/weather"><i class="fa fa-sun-o fa-2x"></i></a>
         <i ng-click="model.filtersDrivers()" class="fa fa-car fa-2x"></i>
         <i ng-click="model.filtersHiker()" class="fa fa-male fa-2x"></i>
         <i ng-click="model.filtersRest()" class="fa fa-recycle fa-2x"></i>
+        -->
     </div>
     <a href="#/user/{{model.uid}}"><i class="fa fa-user fa-2x" aria-hidden="true"></i></a>
 </footer>
