Added Catalog New Item

--- a/public/views/catalog/catalog-list.view.client.html
+++ b/public/views/catalog/catalog-list.view.client.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default navbar-static-top">
     <h3>Catalog of Items</h3>
-    <div class="Check_Icon"><a href="#/user/{{model.uid}}/post/{{model.type}}"><i class="fa fa-plus fa-2x" aria-hidden="true"></i></a></div>
+    <div class="Check_Icon"><a href="#/catalog/addItem"><i class="fa fa-plus fa-2x" aria-hidden="true"></i></a></div>
 
 </nav>
 
