--- a/public/views/catalog/catalog-new.view.client.html
+++ b/public/views/catalog/catalog-new.view.client.html
@@ -10,34 +10,26 @@
     <form method="post" action="/path/to/form/service">
         <fieldset class="form-group">
             <div class="form-group">
-                <label for="name">Goal Destination</label>
+                <label for="name">DigiKey PN</label>
                 <input ng-model="model.destination" type="text" class="form-control" id="name" placeholder="Name">
             </div>
         </fieldset>
         <fieldset class="form-group">
             <div class="form-group">
-                <label for="name">Ideal Leave Time</label>
+                <label for="name">Manufacturer Part Number</label>
                 <input ng-model="model.pickupTime" type="text" class="form-control" id="name" placeholder="Time">
             </div>
         </fieldset>
         <fieldset class="form-group">
             <div class="form-group">
-                <label for="comment">Ideal Pickup Location</label>
-                <textarea ng-model="model.pickup" class="form-control" placeholder="Description" id="comment"></textarea>
-            </div>
-        </fieldset>
-        <fieldset class="form-group">
-            <div class="form-group">
-                <label for="comment">Details on Trip</label>
+                <label for="comment">Description</label>
                 <textarea ng-model="model.text" class="form-control" rows="5" placeholder="Description" id="comment"></textarea>
             </div>
         </fieldset>
+        <fieldset class="form-group">
+          <a ng-click="model.createPost()" class="btn btn-block btn-primary" role="button">Submit</a>
+        </fieldset>
     </form>
-
-
-    <fieldset class="form-group">
-        <a ng-click="model.createPost()" class="btn btn-block btn-primary" role="button">Submit</a>
-    </fieldset>
 
     <fieldset class="form-group"></fieldset>
     <h1></h1>
