Added updates to everything

--- a/public/views/catalog/catalog-new.view.client.html
+++ b/public/views/catalog/catalog-new.view.client.html
@@ -11,19 +11,19 @@
         <fieldset class="form-group">
             <div class="form-group">
                 <label for="name">DigiKey PN</label>
-                <input ng-model="model.destination" type="text" class="form-control" id="name" placeholder="Name">
+                <input ng-model="model.PN" type="text" class="form-control" id="name" placeholder="Name">
             </div>
         </fieldset>
         <fieldset class="form-group">
             <div class="form-group">
                 <label for="name">Manufacturer Part Number</label>
-                <input ng-model="model.pickupTime" type="text" class="form-control" id="name" placeholder="Time">
+                <input ng-model="model.MPN" type="text" class="form-control" id="name" placeholder="Time">
             </div>
         </fieldset>
         <fieldset class="form-group">
             <div class="form-group">
                 <label for="comment">Description</label>
-                <textarea ng-model="model.text" class="form-control" rows="5" placeholder="Description" id="comment"></textarea>
+                <textarea ng-model="model.Description" class="form-control" rows="5" placeholder="Description" id="comment"></textarea>
             </div>
         </fieldset>
         <fieldset class="form-group">
