--- a/public/views/catalog/catalog-list.view.client.html
+++ b/public/views/catalog/catalog-list.view.client.html
@@ -12,19 +12,19 @@
                 <a ng-click="model.search(model.searchQuery)" class="btn btn-block btn-primary" role="button">Search!</a>
             </div>
         </fieldset>
-        <tbody ng-repeat="post in model.posts" ng-switch on="post.type">
-        <tr ng-switch-when="HIKER">
+        <tbody ng-repeat="post in model.posts">
+        <tr>
             <td>
                 <i class="fa fa-male fa-4x"></i>
                 <div class="container">
-                    <h2>Hiker: {{post.user}}</h2>
+                    <h2>PN: {{post.PN}}</h2>
                 </div>
                 <div class="container">
-                    <h3>Would like to goto <b>{{post.destination}}</b> on <b>{{post.pickupTime}}</b>, leaving from <b>{{post.pickup}}</b></h3>
+                    <h3>PN: {{post.MPN}}</h3>
                 </div>
 
                 <div class="container">
-                    <h3>Details: {{post.text}}</h3>
+                    <h3>Description: {{post.Description}}</h3>
                 </div>
 
                 <div class="container">
@@ -37,31 +37,6 @@
 
                 <img border="0" ng-src="{{post.url}}" width="{{post.width}}" height="auto">
                 <a ng-click="model.invite(post._id, post)" class="btn btn-block btn-primary" role="button">Join/Leave Potential Hike</a>
-            </td>
-        </tr>
-        <tr ng-switch-when="DRIVER">
-            <td>
-                <i class="fa fa-car fa-4x"></i>
-
-                <div class="container"></div>
-                <h2>Driver: {{post.user}}</h2>
-
-                <div class="container">
-                    <h3>Is going to <b>{{post.destination}}</b> on <b>{{post.pickupTime}}</b>, leaving from <b>{{post.pickup}}</b></h3>
-                </div>
-
-                <div class="container">
-                    <h3>Details: {{post.text}}</h3>
-                </div>
-
-                <div class="container">
-                    <h3 ng-show="post.participant.length > 0">Car Pool:</h3>
-                    <div ng-repeat="user in post.participant" ng-switch on="user">
-                        <h4>{{user}}</h4>
-                    </div>
-                </div>
-
-                <a ng-click="model.join(post._id, post)" class="btn btn-block btn-primary" role="button">Join/Depart the Pool</a>
             </td>
         </tr>
         </tbody>
