--- a/public/views/catalog/catalog-list.view.client.html
+++ b/public/views/catalog/catalog-list.view.client.html
@@ -15,12 +15,11 @@
         <tbody ng-repeat="post in model.posts">
         <tr>
             <td>
-                <i class="fa fa-male fa-4x"></i>
                 <div class="container">
-                    <h2>PN: {{post.PN}}</h2>
+                    <h2>Part Number: {{post.PN}}</h2>
                 </div>
                 <div class="container">
-                    <h3>PN: {{post.MPN}}</h3>
+                    <h3>Manufacturer Part Number: {{post.MPN}}</h3>
                 </div>
 
                 <div class="container">
@@ -36,7 +35,7 @@
 
 
                 <img border="0" ng-src="{{post.url}}" width="{{post.width}}" height="auto">
-                <a ng-click="model.invite(post._id, post)" class="btn btn-block btn-primary" role="button">Join/Leave Potential Hike</a>
+                <a ng-click="model.delete" class="btn btn-block btn-warning" role="button">delete</a>
             </td>
         </tr>
         </tbody>
