--- a/public/CSS/style.css
+++ b/public/CSS/style.css
@@ -3,14 +3,14 @@
     bottom: 0;
     width: 100%;
     height: auto;
-    background-color: #f5f5f5;
+    color: white;
     text-align: right;
     padding: 10px;
     padding-right: 5%;
     border-width: 0 0 1px;
     border: 1px solid transparent;
-    background-color: #f8f8f8;
     border-color: #e7e7e7;
+    background-color: dimgray;
 }
 
 .widget-edits {
@@ -26,15 +26,55 @@ form {
     padding: 3%;
 }
 
-
-
 .navbar-static-top {
+    top: 0;
     height: auto;
     color: dimgray;
     padding-left: 5%;
     padding-top: 7px;
     padding-bottom: 3px;
 }
+
+body {
+    background-color: darkgray;
+    color: white;
+    /* Fade-in found: http://stackoverflow.com/questions/11679567/using-css-for-fade-in-effect-on-page-load */
+    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 1s; /* Firefox < 16 */
+    -ms-animation: fadein 1s; /* Internet Explorer */
+    -o-animation: fadein 1s; /* Opera < 12.1 */
+    animation: fadein 1s;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 
 h3 {
     display:inline-block;
@@ -89,14 +129,6 @@ h3 {
     display: block;
 }
 
-.header-present {
-    padding-top: 75px;
-}
-
-.footer-present {
-    padding-bottom: 75px;
-}
-
 a:link {
     text-decoration: none;
 }
@@ -113,18 +145,12 @@ a:active {
     text-decoration: none;
 }
 
-.youtube­widget  {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
-    height: 0;
-}
-
-.youtube­widget iframe  {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.video-container {
+    position:relative;
+    padding-bottom:56.25%;
+    padding-top:30px;
+    height:0;
+    overflow:hidden;
 }
 
 .video-container iframe, .video-container object, .video-container embed {
@@ -141,44 +167,25 @@ a:active {
 }
 
 td {
-    background-color: white;
+    background-color: dimgray;
+    color: white;
+    text-align: center;
 }
 
 tr {
     min-height: 100px;
 }
 
-
-
-.J-widget {
-    margin-top: 10px;
-    margin-bottom: 5px;
+.navbar-default {
+    color: white;
+    background-color: dimgray;
 }
 
-.J-widget img {
-    padding-top: 2px;
+.fa {
+    color: black;
+    padding-right: 20px;
 }
 
-.J-widget iframe {
-    padding-top: 2px;
+.table {
+    margin-bottom: 70px;
 }
-
-.J-widget-edit {
-    position: absolute;
-    z-index: 2;
-    right: 0px;
-    background-color: white;
-    padding-left: 5px;
-    padding-bottom: 5px;
-    border-bottom-left-radius: 2px;
-    margin-right: 5px;
-}
-
-.J-margin-top-10 {
-    margin-top: 10px;
-}
-
-.J-photo-array {
-    padding: 4px;
-}
-
