--- a/public/views/catalog/catalog-list.view.client.html
+++ b/public/views/catalog/catalog-list.view.client.html
@@ -33,9 +33,9 @@
                     </div>
                 </div>
 
-
                 <img border="0" ng-src="{{post.url}}" width="{{post.width}}" height="auto">
-                <a ng-click="model.delete" class="btn btn-block btn-danger" role="button">delete</a>
+
+                <a ng-click="model.delete({{post._id}})" class="btn btn-block btn-danger" role="button">delete</a>
             </td>
         </tr>
         </tbody>
