Attempting Delete again

--- a/public/views/catalog/catalog-list.view.client.html
+++ b/public/views/catalog/catalog-list.view.client.html
@@ -35,7 +35,7 @@
 
                 <img border="0" ng-src="{{post.url}}" width="{{post.width}}" height="auto">
 
-                <a ng-click="" class="btn btn-block btn-danger" role="button">delete</a>
+                <a ng-click="delete(post._id)" class="btn btn-block btn-danger" role="button">delete</a>
             </td>
         </tr>
         </tbody>
