Testing works with Git

--- a/public/views/catalog/catalog-list.view.client.html
+++ b/public/views/catalog/catalog-list.view.client.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-default navbar-static-top">
-    <h3>Catalog of Items</h3>
+    <h3>Catalog of Items: Updated</h3>
     <div class="Check_Icon"><a href="#/catalog/addItem"><i class="fa fa-plus fa-2x" aria-hidden="true"></i></a></div>
 
 </nav>
