--- a/public/views/catalog/catalog-new.view.client.html
+++ b/public/views/catalog/catalog-new.view.client.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default navbar-static-top">
     <div class="Left_Icon"><a href="#/catalog"><i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i></a></div>
-    <h3>New {{model.type}} Post</h3>
+    <h3>New Part</h3>
 </nav>
 
 
@@ -11,19 +11,19 @@
         <fieldset class="form-group">
             <div class="form-group">
                 <label for="name">DigiKey PN</label>
-                <input ng-model="model.PN" type="text" class="form-control" id="name" placeholder="Name">
+                <input ng-model="model.PN" type="text" class="form-control" id="name" placeholder="XXX-XXX-ND">
             </div>
         </fieldset>
         <fieldset class="form-group">
             <div class="form-group">
                 <label for="name">Manufacturer Part Number</label>
-                <input ng-model="model.MPN" type="text" class="form-control" id="name" placeholder="Time">
+                <input ng-model="model.MPN" type="text" class="form-control" id="name" placeholder="Manufacturer PN">
             </div>
         </fieldset>
         <fieldset class="form-group">
             <div class="form-group">
                 <label for="comment">Description</label>
-                <textarea ng-model="model.Description" class="form-control" rows="5" placeholder="Description" id="comment"></textarea>
+                <textarea ng-model="model.Description" class="form-control" rows="5" placeholder="Righ Angle, .100' connector..." id="comment"></textarea>
             </div>
         </fieldset>
         <fieldset class="form-group">
