--- a/public/views/catalog/catalog-list.view.client.html
+++ b/public/views/catalog/catalog-list.view.client.html
@@ -21,28 +21,24 @@
         <tbody ng-repeat="post in model.posts">
         <tr>
             <td>
-                <div class="container">
-                    <h2>Part Number: {{post.PN}}</h2>
+                <a target="_blank" href="http://www.digikey.com/product-search/en?keywords={{post.PN}}" class="btn btn-block btn-success" role="button">Link to DigiKey</a>
+                <div class="partContainer">
+                    <h3>Part Number: {{post.PN}}</h3>
                 </div>
-                <div class="container">
+                <div class="partContainer">
                     <h3>Manufacturer Part Number: {{post.MPN}}</h3>
                 </div>
 
-                <div class="container">
+                <div class="partContainer">
                     <h3>Description: {{post.Description}}</h3>
-                </div>
-
-                <div class="container">
-                    <h3 ng-show="post.participant.length > 0">People Interested:</h3>
-                    <div ng-repeat="user in post.participant" ng-switch on="user">
-                        <h4>{{user}}</h4>
-                    </div>
                 </div>
 
                 <img border="0" ng-src="{{post.url}}" width="{{post.width}}" height="auto">
 
                 <a ng-click="model.deletePart(post._id)" class="btn btn-block btn-danger" role="button">delete</a>
             </td>
+
+
         </tr>
         </tbody>
     </table>
