--- a/public/views/catalog/catalog-list.view.client.html
+++ b/public/views/catalog/catalog-list.view.client.html
@@ -25,7 +25,11 @@
 
         <tbody ng-repeat="post in model.posts">
         <tr>
-            <td style="padding-bottom: 20px;padding-top: 20px;">
+            <td style="padding-bottom: 20px;padding-top: 20px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: darkgray;
+    background-color: darkgrey;">
     <table style="width:100%;">
         <tbody>
         <tr>
@@ -35,7 +39,8 @@
             </td>
         </tr>
         <tr>
-            <th class="innerTable">
+            <th class="innerTable"
+                style="border-right-style: solid;border-right-width: 2px;border-right-color: black;">
                 <h3>Digi-Key Part Number</h3>
             </th>
             <td class="innerTable">
@@ -43,7 +48,8 @@
             </td>
         </tr>
         <tr>
-            <th class="innerTable">
+            <th class="innerTable"
+                style="border-right-style: solid;border-right-width: 2px;border-right-color: black;">
                 <h3>Manufacturer Part Number</h3>
             </th>
             <td class="innerTable">
@@ -51,7 +57,8 @@
             </td>
         </tr>
         <tr>
-            <th>
+            <th
+                    style="border-right-style: solid;border-right-width: 2px;border-right-color: black;width:50%;">
                 <h3>Description</h3>
             </th>
             <td>
