Added initial Search Functionality

--- a/public/views/catalog/catalog-list.view.client.html
+++ b/public/views/catalog/catalog-list.view.client.html
@@ -8,17 +8,23 @@
     <table class="table table-striped">
         <fieldset class="form-group">
             <div class="form-group">
+                <input ng-model="model.barcode" type="text" class="form-control" id="name" placeholder="Barcode">
+                <a ng-click="model.AddPartWithBarcode(model.barcode)" class="btn btn-block btn-primary" role="button">Add
+                    Item from Barcode</a>
+            </div>
+        </fieldset>
+        <fieldset class="form-group">
+            <div class="form-group">
                 <input ng-model="model.searchQuery" type="text" class="form-control" id="name"
-                       placeholder="Search Query">
+                       placeholder="Search for Digikey PN and Manufacturer Part Numbers here!">
                 <a ng-click="model.search(model.searchQuery)" class="btn btn-block btn-primary"
                    role="button">Search!</a>
             </div>
         </fieldset>
         <fieldset class="form-group">
             <div class="form-group">
-                <input ng-model="model.barcode" type="text" class="form-control" id="name" placeholder="Barcode">
-                <a ng-click="model.AddPartWithBarcode(model.barcode)" class="btn btn-block btn-primary" role="button">Add
-                    Item</a>
+                <a ng-if="model.cancelSearch" ng-click="model.SearchCanceled()" class="btn btn-block btn-warning"
+                   role="button">Cancel Search</a>
             </div>
         </fieldset>
 
