--- a/public/views/catalog/catalog-list.view.client.html
+++ b/public/views/catalog/catalog-list.view.client.html
@@ -44,7 +44,7 @@
     border-width: 2px;
     border-color: darkgray;
     background-color: darkgrey;">
-    <table style="width:100%;">
+    <table style="width:98%;">
         <tbody>
         <tr>
             <td colspan="2">
@@ -98,8 +98,8 @@
     <div class="pull-left">
         <i ng-click="model.importFile()" class="fa fa-folder-open-o fa-2x"></i>
         <i ng-click="model.exportFile()" class="fa fa-file-excel-o fa-2x"></i>
+        <i href="#/catalog/addList" class="fa fa-list-ul fa-2x"></i>
         <!--
-        <i class="fa fa-area-chart fa-2x"></i>
         <a href="#/weather"><i class="fa fa-sun-o fa-2x"></i></a>
         <i ng-click="model.filtersRest()" class="fa fa-recycle fa-2x"></i>
         -->
